--- a/piglatin.html
+++ b/piglatin.html
@@ -9,19 +9,19 @@
   </head>
   <body>
     <div class="container">
-      <h1>Leap year detector</h1>
+      <h1>PiggyMe</h1>
 
-      <form id="leap-year">
+      <form id="piglatin">
         <div class="form-group">
-          <label for="year">Enter a year and find out if it's a leap year:</label>
-          <input id="year" type="text">
+          <label for="word">Enter a word:</label>
+          <input id="word" type="text">
         </div>
 
         <button type="submit" class="btn">Find out!</button>
       </form>
 
       <div id="result">
-        <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
+        <p><span class="word"></span> is <span class="not"></span></p>
       </div>
     </div>
   </body>
