--- a/piglatin.html
+++ b/piglatin.html
@@ -3,9 +3,9 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-1.11.2.js"></script>
+    <script src="js/jquery-1.11.3.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Leap year detector</title>
+    <title>Pig Latin Translator</title>
   </head>
   <body>
     <div class="container">
@@ -21,7 +21,7 @@
       </form>
 
       <div id="result">
-        <p><span class="word"></span> is <span class="not"></span></p>
+        <p>The word <span class="word"></span> is <span class="result"></span> in Pig Latin</p>
       </div>
     </div>
   </body>
