add condition to handle instansed of qu in a word

--- a/piglatin.html
+++ b/piglatin.html
@@ -19,9 +19,9 @@
 
         <button type="submit" class="btn">Find out!</button>
       </form>
-
+        <br>
       <div id="result">
-        <p>The word <span class="word"></span> is <span class="result"></span> in Pig Latin</p>
+        <p>The word <span class="word"></span> translates to <span class="result"></span> in Pig Latin</p>
       </div>
     </div>
   </body>
