--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Pig Latin Translator</title>
+    <title>gettin' piggy wit it</title>
   </head>
-  <body>
-    <div class="container">
-      <h1>PiggyMe</h1>
-
-      <form id="piglatin">
+  <body class="text-center">
+    <div class="border text-center">
+    <div class="text-center">
+      <img src="img/jiggy.gif" alt="Will Smith gettin jiggy gif" />
+    </div>
+    <div class="transbox text-center">
+      <h1>gettin' piggy wit it</h1>
+      <div class="">
+      <form id="piglatin" class="navbar-form">
         <div class="form-group">
-          <label for="word">Enter a word:</label>
-          <input id="word" type="text">
+          <label for="word" >Enter a English word to find out its Pig Latin translation</label><br>
+          <input id="word" type="text" class="form-control" placeholder="Enter a word">
+          <button type="submit" class="btn">NA NA NA NA NA NA NA</button>
         </div>
-
-        <button type="submit" class="btn">Find out!</button>
       </form>
         <br>
       <div id="result">
-        <p>The word <span class="word"></span> translates to <span class="result"></span> in Pig Latin</p>
+        <h3>The word <span class="word"></span> translates to <span class="result"></span> in Pig Latin</h3>
       </div>
+    </div>
+  </div>
     </div>
   </body>
 </html>
