change button text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="form-group">
             <label for="word" >Enter a English word to find out its Pig Latin translation</label><br>
             <input id="word" type="text" class="form-control" placeholder="Enter a word">
-            <button type="submit" class="btn">NA NA NA NA NA NA NA</button>
+            <button type="submit" class="btn">On your mark ready set let's go!</button>
           </div>
         </form>
           <div id="result">
